refactor: KAN-351 기존 온디맨드 관련 로직 수정